--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
           <ion-icon name="close-outline"></ion-icon>
         </button>
 
-        <a href="#" class="logo">
-          <img src="./assets/images/logo.svg" width="190" height="50" alt="Footcap logo">
+        <a href="index.html" class="logo">
+          <img src="./assets/images/Readify.png" style="width: 70px;" alt="Footcap logo">
         </a>
 
         <ul class="navbar-list">
@@ -108,9 +108,7 @@
           </h2>
 
           <p class="hero-text">
-            Acelere com competência benefícios alternativos enquanto catalisadores de ponta para a mudança. Alavancagem global
-            existente um
-            matriz expandida de liderança.
+            A Readify está focada em achar produtos baratos e funcionais da shopee, obtendo varios tipos de produtos, do item mais criativo, até a sua marca de roupa favorita!
           </p>
 
           <a href="#produtos">
@@ -140,7 +138,7 @@
 
                 <figure class="card-banner">
                   <a href="https://shope.ee/5Khi7CFkME">
-                    <img src="assets/images/Sapato nike branco e preto.png" style="width: 360px;" loading="lazy"
+                    <img src="assets/images/TÊNIS DUNK LOW UNIVERSITY BLUE UNISSEX.png" style="width: 360px;" loading="lazy"
                       alt="Running Sneaker Shoes" class="image-contain">
                     <div class="card-badge">Novo</div>
                   </a>
@@ -196,7 +194,7 @@
                     <div class="card-cat">
                     </div>
                     <h3 class="h3 card-title">
-                      <a href="https://shope.ee/3KwdPFl5Jx">Balde forma de gelo com tampa</a>
+                      <a href="https://shope.ee/3KwdPFl5Jx">BALDE FORMA DE GELO COM TAMPA</a>
                     </h3>
                     <data class="card-price" value="180.85">R$28,00</data>
                   </div>
@@ -224,19 +222,13 @@
         <div class="container">
 
           <div class="special-banner" style="background-image: url('./assets/images/special-banner.jpg')">
-            <h2 class="h3 banner-title">New Trend Edition</h2>
-
-            <a href="#" class="btn btn-link">
-              <span>Explore All</span>
-
-              <ion-icon name="arrow-forward-outline" aria-hidden="true"></ion-icon>
-            </a>
+            <h2 class="h3 banner-title">Nova edição Readify</h2>
           </div>
 
           <div class="special-product">
 
             <h2 class="h2 section-title">
-              <span class="text">Nike Special</span>
+              <span class="text">Especial da Nike</span>
 
               <span class="line"></span>
             </h2>
@@ -247,10 +239,11 @@
                 <div class="product-card" tabindex="0">
 
                   <figure class="card-banner">
-                    <img src="./assets/images/product-1.jpg" width="312" height="350" loading="lazy"
-                      alt="Running Sneaker Shoes" class="image-contain">
-
-                    <div class="card-badge">New</div>
+                    <a href="https://shope.ee/5Khi7CFkME">
+                      <img src="./assets/images/TÊNIS DUNK LOW UNIVERSITY BLUE UNISSEX.png" style="width: 350px; height: 360px;" loading="lazy"
+                        alt="Running Sneaker Shoes" class="image-contain">
+                      <div class="card-badge">Novo</div>
+                    </a>
 
                     <ul class="card-action-list">
 
@@ -258,32 +251,6 @@
                         <button class="card-action-btn" aria-labelledby="card-label-1">
                           <ion-icon name="cart-outline"></ion-icon>
                         </button>
-
-                        <div class="card-action-tooltip" id="card-label-1">Add to Cart</div>
-                      </li>
-
-                      <li class="card-action-item">
-                        <button class="card-action-btn" aria-labelledby="card-label-2">
-                          <ion-icon name="heart-outline"></ion-icon>
-                        </button>
-
-                        <div class="card-action-tooltip" id="card-label-2">Add to Whishlist</div>
-                      </li>
-
-                      <li class="card-action-item">
-                        <button class="card-action-btn" aria-labelledby="card-label-3">
-                          <ion-icon name="eye-outline"></ion-icon>
-                        </button>
-
-                        <div class="card-action-tooltip" id="card-label-3">Quick View</div>
-                      </li>
-
-                      <li class="card-action-item">
-                        <button class="card-action-btn" aria-labelledby="card-label-4">
-                          <ion-icon name="repeat-outline"></ion-icon>
-                        </button>
-
-                        <div class="card-action-tooltip" id="card-label-4">Compare</div>
                       </li>
 
                     </ul>
@@ -292,15 +259,15 @@
                   <div class="card-content">
 
                     <div class="card-cat">
-                      <a href="#" class="card-cat-link">Men</a> /
-                      <a href="#" class="card-cat-link">Women</a>
+                      <a href="https://shope.ee/5Khi7CFkME" class="card-cat-link">Homem</a> /
+                      <a href="https://shope.ee/5Khi7CFkME" class="card-cat-link">Mulher</a>
                     </div>
 
                     <h3 class="h3 card-title">
-                      <a href="#">Running Sneaker Shoes</a>
+                      <a href="https://shope.ee/5Khi7CFkME">TÊNIS DUNK LOW UNIVERSITY BLUE UNISSEX</a>
                     </h3>
 
-                    <data class="card-price" value="180.85">$180.85</data>
+                    <data class="card-price" value="53.85">R$53.85</data>
 
                   </div>
 
@@ -320,33 +287,6 @@
                         <button class="card-action-btn" aria-labelledby="card-label-1">
                           <ion-icon name="cart-outline"></ion-icon>
                         </button>
-
-                        <div class="card-action-tooltip" id="card-label-1">Add to Cart</div>
-                      </li>
-
-                      <li class="card-action-item">
-                        <button class="card-action-btn" aria-labelledby="card-label-2">
-                          <ion-icon name="heart-outline"></ion-icon>
-                        </button>
-
-                        <div class="card-action-tooltip" id="card-label-2">Add to Whishlist</div>
-                      </li>
-
-                      <li class="card-action-item">
-                        <button class="card-action-btn" aria-labelledby="card-label-3">
-                          <ion-icon name="eye-outline"></ion-icon>
-                        </button>
-
-                        <div class="card-action-tooltip" id="card-label-3">Quick View</div>
-                      </li>
-
-                      <li class="card-action-item">
-                        <button class="card-action-btn" aria-labelledby="card-label-4">
-                          <ion-icon name="repeat-outline"></ion-icon>
-                        </button>
-
-                        <div class="card-action-tooltip" id="card-label-4">Compare</div>
-                      </li>
 
                     </ul>
                   </figure>
