Novos produtos no site!
adicionando Novos produtos no site!

--- a/index.html
+++ b/index.html
@@ -67,15 +67,15 @@
           </li>
 
           <li class="navbar-item">
-            <a href="#" class="navbar-link">Sobre</a>
-          </li>
-
-          <li class="navbar-item">
             <a href="#produtos" class="navbar-link">Produtos</a>
           </li>
 
           <li class="navbar-item">
             <a href="https://www.tiktok.com/@.readify" class="navbar-link">Perfil</a>
+          </li>
+
+          <li class="navbar-item">
+            <a href="https://help.shopee.com.br/portal/webform/d75e2dbb49594bd19d1ea83485339a45?" class="navbar-link">Suporte</a>
           </li>
 
           <li class="navbar-item">
@@ -156,8 +156,8 @@
                 <a href="https://shope.ee/5Khi7CFkME">
                   <div class="card-content">
                     <div class="card-cat">
-                      <a href="#" class="card-cat-link">Homem</a> /
-                      <a href="#" class="card-cat-link">Women</a>
+                      <a href="https://shope.ee/5Khi7CFkME" class="card-cat-link">Homem</a> /
+                      <a href="https://shope.ee/5Khi7CFkME" class="card-cat-link">Mulher</a>
                     </div>
                     <h3 class="h3 card-title">
                       <a href="https://shope.ee/5Khi7CFkME">TÊNIS DUNK LOW UNIVERSITY BLUE UNISSEX</a>
@@ -202,6 +202,240 @@
 
               </div>
             </li>
+
+            <li class="product-item">
+              <div class="product-card" tabindex="0">
+
+                <figure class="card-banner">
+                  <a href="https://shope.ee/fvtYrjJFi">
+                    <img src="assets/images/Camisa Camiseta Masculina Anti Social Social Club.png" style="width: 360px; height: 350px;" loading="lazy"
+                      alt="Running Sneaker Shoes" class="image-contain">
+                    <div class="card-badge">Novo</div>
+                  </a>
+
+                  <ul class="card-action-list">
+
+                    <li class="card-action-item">
+                      <button class="card-action-btn" aria-labelledby="card-label-1">
+                        <ion-icon name="cart-outline"></ion-icon>
+                      </button>
+
+                  </ul>
+                </figure>
+
+                <a href="https://shope.ee/fvtYrjJFi">
+                  <div class="card-content">
+                    <div class="card-cat">
+                      <a href="https://shope.ee/fvtYrjJFi" class="card-cat-link">Homem</a> /
+                      <a href="https://shope.ee/fvtYrjJFi" class="card-cat-link">Mulher</a>
+                    </div>
+                    <h3 class="h3 card-title">
+                      <a href="https://shope.ee/fvtYrjJFi">Camiseta Masculina Anti Social Social Club</a>
+                    </h3>
+                    <data class="card-price" value="R$31,85">R$31,85</data>
+                  </div>
+                </a>
+
+              </div>
+            </li> <br>
+
+            <li class="product-item">
+              <div class="product-card" tabindex="0">
+
+                <figure class="card-banner">
+                  <a href="https://shope.ee/8KLKh4iZhD">
+                    <img src="assets/images/Camisa de time Barcelona.png" style="width: 368px;" loading="lazy"
+                      alt="Running Sneaker Shoes" class="image-contain">
+                  </a>
+
+                  <ul class="card-action-list">
+
+                    <li class="card-action-item">
+                      <button class="card-action-btn" aria-labelledby="card-label-1">
+                        <ion-icon name="cart-outline"></ion-icon>
+                      </button>
+
+                  </ul>
+                </figure>
+
+                <a href="https://shope.ee/8KLKh4iZhD">
+                  <div class="card-content">
+                    <div class="card-cat">
+                    </div>
+                    <h3 class="h3 card-title">
+                      <a href="https://shope.ee/8KLKh4iZhD">Camisa de time Barcelona</a>
+                    </h3>
+                    <data class="card-price" value="180.85">R$59,98 - R$93,00</data>
+                  </div>
+                </a>
+
+              </div>
+            </li>
+
+            <li class="product-item">
+              <div class="product-card" tabindex="0">
+
+                <figure class="card-banner">
+                  <a href="https://shope.ee/A9mysyoBMJ">
+                    <img src="assets/images/Camisa de time Borussia Dortmund.png" style="width: 368px;" loading="lazy"
+                      alt="Running Sneaker Shoes" class="image-contain">
+                  </a>
+
+                  <ul class="card-action-list">
+
+                    <li class="card-action-item">
+                      <button class="card-action-btn" aria-labelledby="card-label-1">
+                        <ion-icon name="cart-outline"></ion-icon>
+                      </button>
+
+                  </ul>
+                </figure>
+
+                <a href="https://shope.ee/A9mysyoBMJ">
+                  <div class="card-content">
+                    <div class="card-cat">
+                    </div>
+                    <h3 class="h3 card-title">
+                      <a href="https://shope.ee/A9mysyoBMJ">Camisa de time Borussia Dortmund</a>
+                    </h3>
+                    <data class="card-price" value="R$59,98 - R$77,98">R$59,98 - R$77,98</data>
+                  </div>
+                </a>
+
+              </div>
+            </li>
+
+            <li class="product-item">
+              <div class="product-card" tabindex="0">
+
+                <figure class="card-banner">
+                  <a href="https://shope.ee/4fS2L7yfat">
+                    <img src="assets/images/Camisa de time branca flamengo.png" style="width: 368px;" loading="lazy"
+                      alt="Running Sneaker Shoes" class="image-contain">
+                  </a>
+
+                  <ul class="card-action-list">
+
+                    <li class="card-action-item">
+                      <button class="card-action-btn" aria-labelledby="card-label-1">
+                        <ion-icon name="cart-outline"></ion-icon>
+                      </button>
+
+                  </ul>
+                </figure>
+
+                <a href="https://shope.ee/4fS2L7yfat">
+                  <div class="card-content">
+                    <div class="card-cat">
+                    </div>
+                    <h3 class="h3 card-title">
+                      <a href="https://shope.ee/4fS2L7yfat">Camisa de time branca flamengo</a>
+                    </h3>
+                    <data class="card-price" value="R$59,98 - R$92,98">R$59,98 - R$92,98</data>
+                  </div>
+                </a>
+
+              </div>
+            </li> <br>
+
+            <li class="product-item">
+              <div class="product-card" tabindex="0">
+
+                <figure class="card-banner">
+                  <a href="https://shope.ee/7ziUJhwfUQ">
+                    <img src="assets/images/Camisa de time Brasil.png" style="width: 368px;" loading="lazy"
+                      alt="Running Sneaker Shoes" class="image-contain">
+                  </a>
+
+                  <ul class="card-action-list">
+
+                    <li class="card-action-item">
+                      <button class="card-action-btn" aria-labelledby="card-label-1">
+                        <ion-icon name="cart-outline"></ion-icon>
+                      </button>
+
+                  </ul>
+                </figure>
+
+                <a href="https://shope.ee/7ziUJhwfUQ">
+                  <div class="card-content">
+                    <div class="card-cat">
+                    </div>
+                    <h3 class="h3 card-title">
+                      <a href="https://shope.ee/7ziUJhwfUQ">Camisa de time Brasil</a>
+                    </h3>
+                    <data class="card-price" value="180.85">R$57,99 - R$74,99</data>
+                  </div>
+                </a>
+
+              </div>
+            </li>
+
+            <li class="product-item">
+              <div class="product-card" tabindex="0">
+
+                <figure class="card-banner">
+                  <a href="https://shope.ee/6KaGKsAYaq">
+                    <img src="assets/images/Camisa de time dragon.png" style="width: 368px;" loading="lazy"
+                      alt="Running Sneaker Shoes" class="image-contain">
+                  </a>
+
+                  <ul class="card-action-list">
+
+                    <li class="card-action-item">
+                      <button class="card-action-btn" aria-labelledby="card-label-1">
+                        <ion-icon name="cart-outline"></ion-icon>
+                      </button>
+
+                  </ul>
+                </figure>
+
+                <a href="https://shope.ee/6KaGKsAYaq">
+                  <div class="card-content">
+                    <div class="card-cat">
+                    </div>
+                    <h3 class="h3 card-title">
+                      <a href="https://shope.ee/6KaGKsAYaq">Camisa de time Dragão</a>
+                    </h3>
+                    <data class="card-price" value="R$64,98 - R$84,98">R$64,98 - R$84,98</data>
+                  </div>
+                </a>
+
+              </div>
+            </li>
+
+            <li class="product-item">
+              <div class="product-card" tabindex="0">
+
+                <figure class="card-banner">
+                  <a href="https://shope.ee/6zpx8HKpZC">
+                    <img src="assets/images/camisa de time milan.png" style="width: 368px;" loading="lazy"
+                      alt="Running Sneaker Shoes" class="image-contain">
+                  </a>
+
+                  <ul class="card-action-list">
+
+                    <li class="card-action-item">
+                      <button class="card-action-btn" aria-labelledby="card-label-1">
+                        <ion-icon name="cart-outline"></ion-icon>
+                      </button>
+
+                  </ul>
+                </figure>
+
+                <a href="https://shope.ee/6zpx8HKpZC">
+                  <div class="card-content">
+                    <div class="card-cat">
+                    </div>
+                    <h3 class="h3 card-title">
+                      <a href="https://shope.ee/6zpx8HKpZC">Camisa de Time Milan</a>
+                    </h3>
+                    <data class="card-price" value="R$59,98 - R$92,98">R$59,98 - R$92,98</data>
+                  </div>
+                </a>
+
+              </div>
+            </li> <br>
 
 
           </ul>
@@ -278,8 +512,10 @@
                 <div class="product-card" tabindex="0">
 
                   <figure class="card-banner">
-                    <img src="./assets/images/product-2.jpg" width="312" height="350" loading="lazy"
-                      alt="Leather Mens Slipper" class="image-contain">
+                    <a href="https://shope.ee/8KLKh4iZhD">
+                      <img src="assets/images/Camisa de time Barcelona.png" style="width: 360px;" loading="lazy"
+                        alt="Leather Mens Slipper" class="image-contain">
+                    </a>
 
                     <ul class="card-action-list">
 
@@ -294,15 +530,14 @@
                   <div class="card-content">
 
                     <div class="card-cat">
-                      <a href="#" class="card-cat-link">Men</a> /
-                      <a href="#" class="card-cat-link">Sports</a>
+                      <a href="https://shope.ee/8KLKh4iZhD" class="card-cat-link">Homem</a> 
                     </div>
 
                     <h3 class="h3 card-title">
-                      <a href="#">Leather Mens Slipper</a>
+                      <a href="https://shope.ee/8KLKh4iZhD">Camisa de time Barcelona</a>
                     </h3>
 
-                    <data class="card-price" value="190.85">$190.85</data>
+                    <data class="card-price" value="R$59,98 - R$93,00">R$59,98 - R$93,00</data>
 
                   </div>
 
@@ -313,44 +548,21 @@
                 <div class="product-card" tabindex="0">
 
                   <figure class="card-banner">
-                    <img src="./assets/images/product-3.jpg" width="312" height="350" loading="lazy"
-                      alt="Simple Fabric Shoe" class="image-contain">
+                    <a href="https://shope.ee/7ziUJhwfUQ">
+                      <img src="assets/images/Camisa de time Brasil.png" style="width: 360px;" loading="lazy"
+                        alt="Simple Fabric Shoe" class="image-contain">
+                    </a>
 
-                    <div class="card-badge">New</div>
+                    <div class="card-badge">Novo</div>
 
                     <ul class="card-action-list">
 
                       <li class="card-action-item">
-                        <button class="card-action-btn" aria-labelledby="card-label-1">
-                          <ion-icon name="cart-outline"></ion-icon>
-                        </button>
-
-                        <div class="card-action-tooltip" id="card-label-1">Add to Cart</div>
-                      </li>
-
-                      <li class="card-action-item">
-                        <button class="card-action-btn" aria-labelledby="card-label-2">
-                          <ion-icon name="heart-outline"></ion-icon>
-                        </button>
-
-                        <div class="card-action-tooltip" id="card-label-2">Add to Whishlist</div>
-                      </li>
-
-                      <li class="card-action-item">
-                        <button class="card-action-btn" aria-labelledby="card-label-3">
-                          <ion-icon name="eye-outline"></ion-icon>
-                        </button>
-
-                        <div class="card-action-tooltip" id="card-label-3">Quick View</div>
-                      </li>
-
-                      <li class="card-action-item">
-                        <button class="card-action-btn" aria-labelledby="card-label-4">
-                          <ion-icon name="repeat-outline"></ion-icon>
-                        </button>
-
-                        <div class="card-action-tooltip" id="card-label-4">Compare</div>
-                      </li>
+                        <a href="https://shope.ee/7ziUJhwfUQ">
+                          <button class="card-action-btn" aria-labelledby="card-label-1">
+                            <ion-icon name="cart-outline"></ion-icon>
+                          </button>
+                        </a>
 
                     </ul>
                   </figure>
@@ -358,15 +570,15 @@
                   <div class="card-content">
 
                     <div class="card-cat">
-                      <a href="#" class="card-cat-link">Men</a> /
-                      <a href="#" class="card-cat-link">Women</a>
+                      <a href="https://shope.ee/7ziUJhwfUQ" class="card-cat-link">Mulher</a> /
+                      <a href="https://shope.ee/7ziUJhwfUQ" class="card-cat-link">Homem</a>
                     </div>
 
                     <h3 class="h3 card-title">
-                      <a href="#">Simple Fabric Shoe</a>
+                      <a href="https://shope.ee/7ziUJhwfUQ">Camisa de time Brasil</a>
                     </h3>
 
-                    <data class="card-price" value="160.85">$160.85</data>
+                    <data class="card-price" value="R$57,99 - R$74,99">R$57,99 - R$74,99</data>
 
                   </div>
 
@@ -767,6 +979,9 @@
   -->
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+  <script>
+    window.alert('[AVISO!] OS PRODUTOS SÃO ENCONTRADOS NA SHOPEE, NÃO TEMOS CONTROLE DA ENTREGA E DO ESTOQUE, POR FAVOR CASO TENHA ALGUMA DUVIDA SOBRE A SEGURANÇA DO PRODUTO ENTRE EM CONTATO COM O VENDEDOR DO PRODUTO QUE VOCÊ QUER COMPRAR! ')
+  </script>
 
 </body>
 
