mudando e colocando o novo index

--- a/index.html
+++ b/index.html
@@ -836,6 +836,501 @@
               </div>
             </li> <br>
 
+            <li class="product-item">
+              <div class="product-card" tabindex="0">
+
+                <figure class="card-banner">
+                  <a href="https://shope.ee/Azhsno6zY">
+                    <img src="https://down-br.img.susercontent.com/file/cdf6a7c2a2b820c5b4633ec419f6f1ee" style="width: 340px;" loading="lazy"
+                      alt="Running Sneaker Shoes" class="image-contain">
+                  </a>
+
+                  <ul class="card-action-list">
+
+                    <li class="card-action-item">
+                      <button class="card-action-btn" aria-labelledby="card-label-1">
+                        <ion-icon name="cart-outline"></ion-icon>
+                      </button>
+
+                  </ul>
+                </figure>
+
+                <a href="https://shope.ee/Azhsno6zY">
+                  <div class="card-content">
+                    <div class="card-cat">
+                    </div>
+                    <h3 class="h3 card-title">
+                      <a href="https://shope.ee/Azhsno6zY">Blusa Moletom Pokemon Gengar Dark Hype Alta Qualidade Capuz Bolso</a>
+                    </h3>
+                    <data class="card-price" value="R$78,31">R$78,31</data>
+                  </div>
+                </a>
+
+              </div>
+            </li>
+
+            <li class="product-item">
+              <div class="product-card" tabindex="0">
+
+                <figure class="card-banner">
+                  <a href="https://shope.ee/10YorN0NQA">
+                    <img src="https://down-lum-br.img.susercontent.com/98b6acd951a9b74eef3118fa548903ea" style="width: 340px;" loading="lazy"
+                      alt="Running Sneaker Shoes" class="image-contain">
+                  </a>
+
+                  <ul class="card-action-list">
+
+                    <li class="card-action-item">
+                      <button class="card-action-btn" aria-labelledby="card-label-1">
+                        <ion-icon name="cart-outline"></ion-icon>
+                      </button>
+
+                  </ul>
+                </figure>
+
+                <a href="https://shope.ee/10YorN0NQA">
+                  <div class="card-content">
+                    <div class="card-cat">
+                    </div>
+                    <h3 class="h3 card-title">
+                      <a href="https://shope.ee/10YorN0NQA">camisa de time Kit 22/23 Colete De Futebol , Clássico Preto E Vermelho ULX8</a>
+                    </h3>
+                    <data class="card-price" value="R$59,99">R$59,99</data>
+                  </div>
+                </a>
+
+              </div>
+            </li>
+
+            <li class="product-item">
+              <div class="product-card" tabindex="0">
+
+                <figure class="card-banner">
+                  <a href="https://shope.ee/6pWbpEXUJu">
+                    <img src="https://down-lum-br.img.susercontent.com/br-11134201-23020-csm5w10l1tnv89.webp" style="width: 340px;" loading="lazy"
+                      alt="Running Sneaker Shoes" class="image-contain">
+                  </a>
+
+                  <ul class="card-action-list">
+
+                    <li class="card-action-item">
+                      <button class="card-action-btn" aria-labelledby="card-label-1">
+                        <ion-icon name="cart-outline"></ion-icon>
+                      </button>
+
+                  </ul>
+                </figure>
+
+                <a href="https://shope.ee/6pWbpEXUJu">
+                  <div class="card-content">
+                    <div class="card-cat">
+                    </div>
+                    <h3 class="h3 card-title">
+                      <a href="https://shope.ee/6pWbpEXUJu">Conjunto De Capuzes De Zíper Para Homens De Outono E Inverno</a>
+                    </h3>
+                    <data class="card-price" value="">R$209,76</data>
+                  </div>
+                </a>
+
+              </div>
+            </li> <br>
+
+            <li class="product-item">
+              <div class="product-card" tabindex="0">
+
+                <figure class="card-banner">
+                  <a href="">
+                    <img src="assets/images/" style="width: 340px;" loading="lazy"
+                      alt="Running Sneaker Shoes" class="image-contain">
+                  </a>
+
+                  <ul class="card-action-list">
+
+                    <li class="card-action-item">
+                      <button class="card-action-btn" aria-labelledby="card-label-1">
+                        <ion-icon name="cart-outline"></ion-icon>
+                      </button>
+
+                  </ul>
+                </figure>
+
+                <a href="">
+                  <div class="card-content">
+                    <div class="card-cat">
+                    </div>
+                    <h3 class="h3 card-title">
+                      <a href="">AQUI</a>
+                    </h3>
+                    <data class="card-price" value="">PREÇO AQUI</data>
+                  </div>
+                </a>
+
+              </div>
+            </li>
+
+            <li class="product-item">
+              <div class="product-card" tabindex="0">
+
+                <figure class="card-banner">
+                  <a href="">
+                    <img src="assets/images/" style="width: 340px;" loading="lazy"
+                      alt="Running Sneaker Shoes" class="image-contain">
+                  </a>
+
+                  <ul class="card-action-list">
+
+                    <li class="card-action-item">
+                      <button class="card-action-btn" aria-labelledby="card-label-1">
+                        <ion-icon name="cart-outline"></ion-icon>
+                      </button>
+
+                  </ul>
+                </figure>
+
+                <a href="">
+                  <div class="card-content">
+                    <div class="card-cat">
+                    </div>
+                    <h3 class="h3 card-title">
+                      <a href="">AQUI</a>
+                    </h3>
+                    <data class="card-price" value="">PREÇO AQUI</data>
+                  </div>
+                </a>
+
+              </div>
+            </li>
+
+            <li class="product-item">
+              <div class="product-card" tabindex="0">
+
+                <figure class="card-banner">
+                  <a href="">
+                    <img src="assets/images/" style="width: 340px;" loading="lazy"
+                      alt="Running Sneaker Shoes" class="image-contain">
+                  </a>
+
+                  <ul class="card-action-list">
+
+                    <li class="card-action-item">
+                      <button class="card-action-btn" aria-labelledby="card-label-1">
+                        <ion-icon name="cart-outline"></ion-icon>
+                      </button>
+
+                  </ul>
+                </figure>
+
+                <a href="">
+                  <div class="card-content">
+                    <div class="card-cat">
+                    </div>
+                    <h3 class="h3 card-title">
+                      <a href="">AQUI</a>
+                    </h3>
+                    <data class="card-price" value="">PREÇO AQUI</data>
+                  </div>
+                </a>
+
+              </div>
+            </li> <br>
+
+            <li class="product-item">
+              <div class="product-card" tabindex="0">
+
+                <figure class="card-banner">
+                  <a href="">
+                    <img src="assets/images/" style="width: 340px;" loading="lazy"
+                      alt="Running Sneaker Shoes" class="image-contain">
+                  </a>
+
+                  <ul class="card-action-list">
+
+                    <li class="card-action-item">
+                      <button class="card-action-btn" aria-labelledby="card-label-1">
+                        <ion-icon name="cart-outline"></ion-icon>
+                      </button>
+
+                  </ul>
+                </figure>
+
+                <a href="">
+                  <div class="card-content">
+                    <div class="card-cat">
+                    </div>
+                    <h3 class="h3 card-title">
+                      <a href="">AQUI</a>
+                    </h3>
+                    <data class="card-price" value="">PREÇO AQUI</data>
+                  </div>
+                </a>
+
+              </div>
+            </li>
+
+            <li class="product-item">
+              <div class="product-card" tabindex="0">
+
+                <figure class="card-banner">
+                  <a href="">
+                    <img src="assets/images/" style="width: 340px;" loading="lazy"
+                      alt="Running Sneaker Shoes" class="image-contain">
+                  </a>
+
+                  <ul class="card-action-list">
+
+                    <li class="card-action-item">
+                      <button class="card-action-btn" aria-labelledby="card-label-1">
+                        <ion-icon name="cart-outline"></ion-icon>
+                      </button>
+
+                  </ul>
+                </figure>
+
+                <a href="">
+                  <div class="card-content">
+                    <div class="card-cat">
+                    </div>
+                    <h3 class="h3 card-title">
+                      <a href="">AQUI</a>
+                    </h3>
+                    <data class="card-price" value="">PREÇO AQUI</data>
+                  </div>
+                </a>
+
+              </div>
+            </li>
+
+            <li class="product-item">
+              <div class="product-card" tabindex="0">
+
+                <figure class="card-banner">
+                  <a href="">
+                    <img src="assets/images/" style="width: 340px;" loading="lazy"
+                      alt="Running Sneaker Shoes" class="image-contain">
+                  </a>
+
+                  <ul class="card-action-list">
+
+                    <li class="card-action-item">
+                      <button class="card-action-btn" aria-labelledby="card-label-1">
+                        <ion-icon name="cart-outline"></ion-icon>
+                      </button>
+
+                  </ul>
+                </figure>
+
+                <a href="">
+                  <div class="card-content">
+                    <div class="card-cat">
+                    </div>
+                    <h3 class="h3 card-title">
+                      <a href="">AQUI</a>
+                    </h3>
+                    <data class="card-price" value="">PREÇO AQUI</data>
+                  </div>
+                </a>
+
+              </div>
+            </li> <br>
+
+            <li class="product-item">
+              <div class="product-card" tabindex="0">
+
+                <figure class="card-banner">
+                  <a href="">
+                    <img src="assets/images/" style="width: 340px;" loading="lazy"
+                      alt="Running Sneaker Shoes" class="image-contain">
+                  </a>
+
+                  <ul class="card-action-list">
+
+                    <li class="card-action-item">
+                      <button class="card-action-btn" aria-labelledby="card-label-1">
+                        <ion-icon name="cart-outline"></ion-icon>
+                      </button>
+
+                  </ul>
+                </figure>
+
+                <a href="">
+                  <div class="card-content">
+                    <div class="card-cat">
+                    </div>
+                    <h3 class="h3 card-title">
+                      <a href="">AQUI</a>
+                    </h3>
+                    <data class="card-price" value="">PREÇO AQUI</data>
+                  </div>
+                </a>
+
+              </div>
+            </li>
+
+            <li class="product-item">
+              <div class="product-card" tabindex="0">
+
+                <figure class="card-banner">
+                  <a href="">
+                    <img src="assets/images/" style="width: 340px;" loading="lazy"
+                      alt="Running Sneaker Shoes" class="image-contain">
+                  </a>
+
+                  <ul class="card-action-list">
+
+                    <li class="card-action-item">
+                      <button class="card-action-btn" aria-labelledby="card-label-1">
+                        <ion-icon name="cart-outline"></ion-icon>
+                      </button>
+
+                  </ul>
+                </figure>
+
+                <a href="">
+                  <div class="card-content">
+                    <div class="card-cat">
+                    </div>
+                    <h3 class="h3 card-title">
+                      <a href="">AQUI</a>
+                    </h3>
+                    <data class="card-price" value="">PREÇO AQUI</data>
+                  </div>
+                </a>
+
+              </div>
+            </li>
+
+            <li class="product-item">
+              <div class="product-card" tabindex="0">
+
+                <figure class="card-banner">
+                  <a href="">
+                    <img src="assets/images/" style="width: 340px;" loading="lazy"
+                      alt="Running Sneaker Shoes" class="image-contain">
+                  </a>
+
+                  <ul class="card-action-list">
+
+                    <li class="card-action-item">
+                      <button class="card-action-btn" aria-labelledby="card-label-1">
+                        <ion-icon name="cart-outline"></ion-icon>
+                      </button>
+
+                  </ul>
+                </figure>
+
+                <a href="">
+                  <div class="card-content">
+                    <div class="card-cat">
+                    </div>
+                    <h3 class="h3 card-title">
+                      <a href="">AQUI</a>
+                    </h3>
+                    <data class="card-price" value="">PREÇO AQUI</data>
+                  </div>
+                </a>
+
+              </div>
+            </li> <br>
+
+            <li class="product-item">
+              <div class="product-card" tabindex="0">
+
+                <figure class="card-banner">
+                  <a href="">
+                    <img src="assets/images/" style="width: 340px;" loading="lazy"
+                      alt="Running Sneaker Shoes" class="image-contain">
+                  </a>
+
+                  <ul class="card-action-list">
+
+                    <li class="card-action-item">
+                      <button class="card-action-btn" aria-labelledby="card-label-1">
+                        <ion-icon name="cart-outline"></ion-icon>
+                      </button>
+
+                  </ul>
+                </figure>
+
+                <a href="">
+                  <div class="card-content">
+                    <div class="card-cat">
+                    </div>
+                    <h3 class="h3 card-title">
+                      <a href="">AQUI</a>
+                    </h3>
+                    <data class="card-price" value="">PREÇO AQUI</data>
+                  </div>
+                </a>
+
+              </div>
+            </li>
+
+            <li class="product-item">
+              <div class="product-card" tabindex="0">
+
+                <figure class="card-banner">
+                  <a href="">
+                    <img src="assets/images/" style="width: 340px;" loading="lazy"
+                      alt="Running Sneaker Shoes" class="image-contain">
+                  </a>
+
+                  <ul class="card-action-list">
+
+                    <li class="card-action-item">
+                      <button class="card-action-btn" aria-labelledby="card-label-1">
+                        <ion-icon name="cart-outline"></ion-icon>
+                      </button>
+
+                  </ul>
+                </figure>
+
+                <a href="">
+                  <div class="card-content">
+                    <div class="card-cat">
+                    </div>
+                    <h3 class="h3 card-title">
+                      <a href="">AQUI</a>
+                    </h3>
+                    <data class="card-price" value="">PREÇO AQUI</data>
+                  </div>
+                </a>
+
+              </div>
+            </li>
+
+            <li class="product-item">
+              <div class="product-card" tabindex="0">
+
+                <figure class="card-banner">
+                  <a href="">
+                    <img src="assets/images/" style="width: 340px;" loading="lazy"
+                      alt="Running Sneaker Shoes" class="image-contain">
+                  </a>
+
+                  <ul class="card-action-list">
+
+                    <li class="card-action-item">
+                      <button class="card-action-btn" aria-labelledby="card-label-1">
+                        <ion-icon name="cart-outline"></ion-icon>
+                      </button>
+
+                  </ul>
+                </figure>
+
+                <a href="">
+                  <div class="card-content">
+                    <div class="card-cat">
+                    </div>
+                    <h3 class="h3 card-title">
+                      <a href="">AQUI</a>
+                    </h3>
+                    <data class="card-price" value="">PREÇO AQUI</data>
+                  </div>
+                </a>
+
+              </div>
+            </li> <br>
+
 
           </ul>
 
